--- a/MoppApp/MoppApp/Settings.storyboard
+++ b/MoppApp/MoppApp/Settings.storyboard
@@ -127,7 +127,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SsO-W3-Uvi" customClass="SettingsChoiceView" customModule="MoppApp" customModuleProvider="target">
-                                                    <rect key="frame" x="16" y="32.5" width="343" height="44"/>
+                                                    <rect key="frame" x="16" y="33" width="343" height="44"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="S6z-Zi-ic2">
                                                             <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
@@ -341,6 +341,44 @@
                                             <outlet property="tsaCertStackView" destination="k8v-bm-Uxj" id="xXi-rG-u03"/>
                                             <outlet property="tsaDataStackView" destination="bwN-Ve-e8h" id="pU1-Ls-1W4"/>
                                             <outlet property="validUntilLabel" destination="ySu-70-Z3E" id="gxW-oQ-Kcp"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="SettingsStateCell" rowHeight="200" id="Jvo-qw-kMQ" customClass="SettingsStateCell" customModule="MoppApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="623.5" width="375" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jvo-qw-kMQ" id="V2q-bf-zDW">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ask role and address on every signing" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iu4-8i-4zf">
+                                                    <rect key="frame" x="16" y="11" width="223.5" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="45" id="yRP-To-rSk"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="15"/>
+                                                    <color key="textColor" name="MoppLabel"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="nSd-0O-0nE">
+                                                    <rect key="frame" x="310" y="18" width="51" height="31"/>
+                                                    <connections>
+                                                        <action selector="stateToggled:" destination="Jvo-qw-kMQ" eventType="valueChanged" id="VeS-PD-EfD"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="nSd-0O-0nE" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Iu4-8i-4zf" secondAttribute="trailing" constant="35" id="FHv-fZ-3Oq"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="nSd-0O-0nE" secondAttribute="bottom" constant="140" id="GM8-k0-EDB"/>
+                                                <constraint firstItem="Iu4-8i-4zf" firstAttribute="leading" secondItem="V2q-bf-zDW" secondAttribute="leadingMargin" id="K6D-9D-RjL"/>
+                                                <constraint firstItem="Iu4-8i-4zf" firstAttribute="top" secondItem="V2q-bf-zDW" secondAttribute="topMargin" id="Lhn-pf-uzO"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Iu4-8i-4zf" secondAttribute="bottom" constant="133" id="Lz8-md-UAC"/>
+                                                <constraint firstItem="nSd-0O-0nE" firstAttribute="top" secondItem="V2q-bf-zDW" secondAttribute="topMargin" constant="7" id="MeV-wl-Pgz"/>
+                                                <constraint firstItem="nSd-0O-0nE" firstAttribute="trailing" secondItem="V2q-bf-zDW" secondAttribute="trailingMargin" id="Si2-1a-e92"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="stateSwitch" destination="nSd-0O-0nE" id="Pds-0O-bwi"/>
+                                            <outlet property="titleLabel" destination="Iu4-8i-4zf" id="avF-7h-HkC"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -618,7 +656,6 @@
                                             <constraint firstItem="fvG-yT-5Nl" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="41X-aB-LWL"/>
                                             <constraint firstItem="uS5-R8-DDB" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="4ZK-L0-0fm"/>
                                             <constraint firstAttribute="trailing" secondItem="0hB-g9-5sw" secondAttribute="trailing" constant="16" id="54S-pI-4JW"/>
-                                            <constraint firstItem="9t3-M4-dAz" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="5Fg-OI-aGz"/>
                                             <constraint firstAttribute="trailing" secondItem="uS5-R8-DDB" secondAttribute="trailing" constant="16" id="5ba-0F-Bnf"/>
                                             <constraint firstItem="0hB-g9-5sw" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="7Uo-lw-emM"/>
                                             <constraint firstAttribute="trailing" secondItem="9M0-ZI-Vph" secondAttribute="trailing" constant="16" id="7cX-Kh-GLh"/>
@@ -698,6 +735,7 @@
                                             <constraint firstAttribute="trailing" secondItem="lJS-SP-IrB" secondAttribute="trailing" constant="16" id="umb-gd-EBZ"/>
                                             <constraint firstAttribute="trailing" secondItem="Ljx-rt-qve" secondAttribute="trailing" constant="16" id="vwh-Vj-N1M"/>
                                             <constraint firstItem="v3j-1F-BkV" firstAttribute="top" secondItem="l32-s5-RMt" secondAttribute="bottom" constant="8" id="wEg-ps-YGb"/>
+                                            <constraint firstItem="f4s-I6-A2B" firstAttribute="top" secondItem="yx1-Am-F1U" secondAttribute="bottom" constant="16" id="wG3-9g-s4H"/>
                                             <constraint firstItem="f4s-I6-A2B" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="wPi-pn-qrd"/>
                                             <constraint firstItem="pEs-3R-bW3" firstAttribute="top" secondItem="i5p-YP-xGx" secondAttribute="bottom" constant="8" id="wec-dG-yA8"/>
                                             <constraint firstItem="GoO-ax-djg" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="xGc-bj-c0V"/>
@@ -760,7 +798,6 @@
                         <outlet property="metaSerial" destination="v3j-1F-BkV" id="9y3-ra-9Rq"/>
                         <outlet property="metaUrl" destination="GoO-ax-djg" id="AV2-cv-9Cq"/>
                         <outlet property="metaVer" destination="lJS-SP-IrB" id="y4u-Ko-HtZ"/>
-                        <outlet property="midSignURL" destination="9t3-M4-dAz" id="zEe-hv-9xe"/>
                         <outlet property="mobileIdSKURL" destination="dyA-bc-5kH" id="6th-4i-5GX"/>
                         <outlet property="mobileIdURL" destination="nTe-hi-UFW" id="vDk-Yq-Mbg"/>
                         <outlet property="oneTimeLoggingSwitch" destination="vjc-8d-DZD" id="nxd-TP-Wji"/>
