--- a/MoppApp/MoppApp/Menu.storyboard
+++ b/MoppApp/MoppApp/Menu.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="czA-yQ-yzD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="czA-yQ-yzD">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -29,15 +29,15 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MenuHeaderCell" rowHeight="140" id="SzM-Ni-3qo" customClass="MenuHeaderCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="375" height="140"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MenuHeaderCell" rowHeight="60" id="SzM-Ni-3qo" customClass="MenuHeaderCell" customModule="MoppApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SzM-Ni-3qo" id="IeX-2D-oTP">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdw-xa-vVM">
-                                                    <rect key="frame" x="311" y="11" width="48" height="48"/>
+                                                    <rect key="frame" x="311" y="11" width="48" height="25"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="48" id="G6A-8h-xoa"/>
                                                         <constraint firstAttribute="height" constant="48" id="fQw-LF-DcI"/>
@@ -61,37 +61,36 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MenuCell" rowHeight="48" id="LeK-zq-mFb" customClass="MenuCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="184.5" width="375" height="48"/>
+                                        <rect key="frame" x="0.0" y="104.5" width="375" height="48"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LeK-zq-mFb" id="JuY-RR-GaA">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EE1-vC-yuM">
-                                                    <rect key="frame" x="16" y="0.0" width="48" height="48"/>
-                                                    <color key="tintColor" name="MoppBaseBackground"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="48" id="aKP-gu-Ert"/>
-                                                        <constraint firstAttribute="width" secondItem="EE1-vC-yuM" secondAttribute="height" multiplier="1:1" id="yFV-de-8ns"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vHb-5a-4W3">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vHb-5a-4W3">
                                                     <rect key="frame" x="72" y="14.5" width="287" height="19"/>
                                                     <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="16"/>
                                                     <color key="textColor" name="MoppBaseBackground"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EE1-vC-yuM">
+                                                    <rect key="frame" x="30" y="16" width="16" height="16"/>
+                                                    <color key="tintColor" name="MoppBaseBackground"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="16" id="4kj-Zl-JFa"/>
+                                                        <constraint firstAttribute="height" constant="16" id="dLc-30-GIA"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstItem="vHb-5a-4W3" firstAttribute="centerY" secondItem="JuY-RR-GaA" secondAttribute="centerY" id="4Zn-eg-HfH"/>
-                                                <constraint firstItem="EE1-vC-yuM" firstAttribute="centerY" secondItem="JuY-RR-GaA" secondAttribute="centerY" id="7jn-lH-trP"/>
-                                                <constraint firstItem="vHb-5a-4W3" firstAttribute="leading" secondItem="EE1-vC-yuM" secondAttribute="trailing" constant="8" symbolic="YES" id="K3Q-mk-h9p"/>
-                                                <constraint firstItem="vHb-5a-4W3" firstAttribute="top" secondItem="JuY-RR-GaA" secondAttribute="top" constant="14.5" id="fMV-CF-Qq6"/>
-                                                <constraint firstItem="vHb-5a-4W3" firstAttribute="leading" secondItem="EE1-vC-yuM" secondAttribute="trailing" constant="8" id="knL-TZ-0Yo"/>
-                                                <constraint firstItem="EE1-vC-yuM" firstAttribute="leading" secondItem="JuY-RR-GaA" secondAttribute="leading" constant="16" id="qSB-yQ-N2s"/>
-                                                <constraint firstItem="vHb-5a-4W3" firstAttribute="centerY" secondItem="JuY-RR-GaA" secondAttribute="centerY" id="w1J-Ss-yyI"/>
-                                                <constraint firstItem="vHb-5a-4W3" firstAttribute="trailing" secondItem="JuY-RR-GaA" secondAttribute="trailingMargin" id="w8d-YB-PHm"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="vHb-5a-4W3" secondAttribute="bottom" constant="3.5" id="1j1-Wo-azt"/>
+                                                <constraint firstItem="vHb-5a-4W3" firstAttribute="top" secondItem="JuY-RR-GaA" secondAttribute="topMargin" constant="3.5" id="2am-hL-nDf"/>
+                                                <constraint firstItem="EE1-vC-yuM" firstAttribute="leading" secondItem="JuY-RR-GaA" secondAttribute="leading" constant="30" id="2bE-5a-1ql"/>
+                                                <constraint firstAttribute="bottom" secondItem="EE1-vC-yuM" secondAttribute="bottom" constant="16" id="8K3-Uf-7lV"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="vHb-5a-4W3" secondAttribute="trailing" id="FVM-b6-I6j"/>
+                                                <constraint firstItem="EE1-vC-yuM" firstAttribute="top" secondItem="JuY-RR-GaA" secondAttribute="top" constant="16" id="f0l-XO-Ebz"/>
+                                                <constraint firstItem="vHb-5a-4W3" firstAttribute="leading" secondItem="EE1-vC-yuM" secondAttribute="trailing" constant="26" id="lfv-cS-bMf"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -101,7 +100,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MenuSeparatorCell" rowHeight="33" id="L1Q-hP-HNC" customClass="MenuSeparatorCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="232.5" width="375" height="33"/>
+                                        <rect key="frame" x="0.0" y="152.5" width="375" height="33"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="L1Q-hP-HNC" id="6ek-8A-bdq">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="33"/>
@@ -125,7 +124,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MenuLanguageCell" rowHeight="69" id="kyP-3t-jrX" customClass="MenuLanguageCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="265.5" width="375" height="69"/>
+                                        <rect key="frame" x="0.0" y="185.5" width="375" height="69"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kyP-3t-jrX" id="3RM-VJ-ZKm">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
